<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.pantallasUsuarios.crearUsuario.CrearUsuario"
    android:background="#C6F6D5">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <!-- Guideline derecha (95% del ancho) -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <TextView
        android:id="@+id/cabezera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/crearCuenta"
        android:textAlignment="center"
        android:textColor="#E85E43"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toTopOf="@+id/guideline_top"
        app:layout_constraintVertical_chainStyle="spread" />


    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:id="@+id/EmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/cabezera"
        app:layout_constraintBottom_toTopOf="@+id/usuario">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:id="@+id/usuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/usuarioo"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/EmailAddress">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/contrasenia"

        app:layout_constraintEnd_toEndOf="@+id/cabezera"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/usuario"
        app:layout_constraintBottom_toTopOf="@+id/botonCrear">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/botonCrear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#5A9BD5"
        android:text="@string/crearCuenta"
        app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:strokeColor="#2C7A7B"
        app:strokeWidth="2dp" />



</androidx.constraintlayout.widget.ConstraintLayout>