<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.EditarUsuario.EditarUsuario"
    android:background="#C6F6D5">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <!-- Guideline derecha (95% del ancho) -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <TextView
        android:id="@+id/cabezera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/editar_usuario"
        android:textAlignment="center"
        android:textColor="#E85E43"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toTopOf="@+id/guideline_top"
        app:layout_constraintVertical_chainStyle="spread" />

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:id="@+id/EmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/cabezera"
        app:layout_constraintBottom_toTopOf="@+id/usuario">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:id="@+id/usuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/usuarioo"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/EmailAddress">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/contrasenia"
        app:layout_constraintEnd_toEndOf="@+id/cabezera"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/usuario"
        app:layout_constraintBottom_toTopOf="@+id/botonActualizar">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/botonActualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#5A9BD5"
        android:text="@string/actualizar_produccion"
        app:layout_constraintBottom_toTopOf="@+id/guideline_middle"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:strokeColor="#2C7A7B"
        app:strokeWidth="2dp" />


    <Button
        android:id="@+id/buttonProduccionesPendientes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:text="Producciones pendientes"
        android:textAlignment="textStart"
        android:textColor="#E85E43"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/guideline_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toTopOf="@+id/guideline_middle"
        app:layout_constraintBottom_toTopOf="@+id/buttonVistas"/>

    <TextView
        android:id="@+id/produccionesTotales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="#E85E43"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonProduccionesPendientes"
        app:layout_constraintEnd_toEndOf="@+id/buttonProduccionesPendientes"
        app:layout_constraintTop_toTopOf="@+id/buttonProduccionesPendientes" />




    <Button
        android:id="@+id/buttonVistas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:text="Producciones vistas"
        android:textAlignment="textStart"
        android:textColor="#E85E43"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/buttonProduccionesPendientes" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="#E85E43"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonVistas"
        app:layout_constraintEnd_toEndOf="@+id/buttonVistas"
        app:layout_constraintTop_toTopOf="@+id/buttonVistas" />




</androidx.constraintlayout.widget.ConstraintLayout>